Make whole card clickable (including image) for featured projects See github issue: https://github.com/18F/18f.gsa.gov/issues/3457 - removes Read More link in card footer - wraps entire card container in a link - styles card H3 to look like a link - adjusts card hover effects to denote entire card as a link

--- a/_sass/_components/card.scss
+++ b/_sass/_components/card.scss
@@ -4,6 +4,12 @@
     text-decoration: none;
   }
 
+  .usa-card__container:hover {
+    h3 {
+      color: $color-dark;
+    }
+  }
+
   .usa-card__img {
     height: 200px;
   }
@@ -15,7 +21,7 @@
   }
 
   h3 {
-    color: color('primary-dark');
+    color: $color-medium;
   }
 
   .usa-card__footer {
